--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "quickfib"
 authors = ["Rhelvetican <bionicvnb@gmail.com>"]
-keywords = ["fibonacci", "rust", "quickfib", "no_std"]
+keywords = ["fibonacci", "math", "quickfib", "no_std"]
 description = "A no_std compatible Fibonacci calculation algorithm implemented in Rust."
 license = "MIT"
-
+repository = "https://github.com/Rhelvetican/quickfib"
+homepage = "https://github.com/Rhelvetican/quickfib"
+documentation = "https://docs.rs/quickfib"
+readme = "README.md"
 version = "1.0.0"
 edition = "2021"
